# my-python-boilerplate

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pyproject.toml.backup  ruff.toml
src/my_python_boilerplate/: __init__.py
